--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -6,6 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Switch
+        android:id="@+id/switch3"
+        android:layout_width="294dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:text="Powiadom mnie 2 dni przed terminem"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Switch
+        android:id="@+id/switch2"
+        android:layout_width="294dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:checked="true"
+        android:text="Powiadom mnie w dniu terminu"
+        app:layout_constraintBottom_toTopOf="@+id/switch3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:checked="true" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="228dp"
+        android:layout_height="1dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/switch2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
@@ -46,64 +83,26 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="344dp"
-        android:layout_height="466dp"
+        android:layout_width="0dp"
+        android:layout_height="361dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:fillViewport="true"
         android:scrollbarStyle="insideOverlay"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
+            android:id="@+id/scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
-            app:layout_constraintEnd_toEndOf="@+id/scrollView2"
-            app:layout_constraintStart_toStartOf="@+id/scrollView2"
-            app:layout_constraintTop_toTopOf="@+id/scrollView2">
+            android:orientation="vertical">
 
-            <Switch
-                android:id="@+id/switch2"
-                android:layout_width="294dp"
-                android:layout_height="40dp"
-                android:layout_marginBottom="8dp"
-                android:checked="true"
-                android:text="Powiadom mnie w dniu terminu"
-                app:layout_constraintBottom_toTopOf="@+id/switch3"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:checked="true" />
-
-            <Switch
-                android:id="@+id/switch3"
-                android:layout_width="294dp"
-                android:layout_height="40dp"
-                android:layout_marginBottom="8dp"
-                android:text="Powiadom mnie 2 dni przed terminem"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="328dp"
-                android:layout_height="1dp"
-                android:layout_marginBottom="8dp"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintBottom_toTopOf="@+id/switch2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
