--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -34,7 +34,7 @@
 
     <View
         android:id="@+id/divider"
-        android:layout_width="228dp"
+        android:layout_width="328dp"
         android:layout_height="1dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="CR Planer"
+        android:text="CR Planer - Terminy na ten miesiąc"
         android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -84,17 +84,18 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="0dp"
-        android:layout_height="361dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:fillViewport="true"
-        android:scrollbarStyle="insideOverlay"
+        android:scrollbarStyle="outsideOverlay"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
             android:id="@+id/scroll"
