--- a/app/src/main/res/layout/client_card.xml
+++ b/app/src/main/res/layout/client_card.xml
@@ -42,6 +42,7 @@
             android:id="@+id/opiekun"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:text="TextView"
             android:textAppearance="@android:style/TextAppearance.Material.Small"
             android:textColor="#999"
