--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -14,6 +14,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:checked="true"
+        android:onClick="switchClicked"
+        android:tag="true"
         android:text="Powiadom mnie w dniu terminu"
         app:layout_constraintBottom_toTopOf="@+id/switch_notify_2days"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +29,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
+        android:onClick="switchClicked"
+        android:tag="false"
         android:text="Powiadom mnie 2 dni przed terminem"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
